--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "tailwind-merge": "^3.2.0",
+    "telegraf": "^4.16.3",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
